# git-restack

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  git-restack.1  setup.cfg  test-requirements.txt  tox.ini
doc/: Makefile
doc/source/: conf.py  developing.rst  index.rst  installation.rst  usage.rst
git_restack/: cmd.py
git_restack/tests/: __init__.py  test_git_restack.py  utils.py
