[metadata]
name = git-restack
summary = Tool to rebase a git branch
description-file = README.rst
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = git gerrit restack
author = OpenStack
author-email = openstack-infra@lists.openstack.org
home-page = https://docs.openstack.org/infra/git-restack/
project-url = https://docs.openstack.org/infra/

[files]
packages =
    git_restack

[entry_points]
console_scripts =
    git-restack = git_restack.cmd:main

[wheel]
universal = 1

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
manpages =
    git-restack.1
warnerrors = True
